name:                 write-yourself-a-scheme
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               George Nicoll
maintainer:           george.nicoll@gmail.com
category:             Development
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable write-yourself-a-scheme
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5,
                        parsec >= 3.1.9
  hs-source-dirs:       src
  default-language:     Haskell2010
